--- a/package.json
+++ b/package.json
@@ -40,9 +40,12 @@
     "@angular/router": "^4.3.4",
     "@angularclass/hmr": "^2.1.3",
     "@angularclass/hmr-loader": "^3.0.4",
+    "@ngx-translate/core": "^7.2.2",
+    "@ngx-translate/http-loader": "^2.0.1",
     "@ultimate/ngxerrors": "^1.3.0",
     "angular2-text-mask": "^8.0.3",
     "archiver": "^2.0.0",
+    "bootstrap": "^3.3.7",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "html-webpack-plugin": "^2.30.1",
@@ -70,10 +73,12 @@
     "assets-webpack-plugin": "^3.5.1",
     "awesome-typescript-loader": "^3.2.3",
     "codelyzer": "^3.1.2",
+    "copy-webpack-plugin": "^4.3.1",
     "cross-env": "^5.0.5",
     "css-loader": "^0.28.4",
     "electron": "^1.7.6",
     "file-loader": "^0.11.2",
+    "html-loader": "^0.5.1",
     "imports-loader": "^0.7.1",
     "istanbul-instrumenter-loader": "^3.0.0",
     "ng-router-loader": "^2.1.0",
