--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "rimraf": "rimraf",
     "webpack": "webpack",
     "webpack-dev-server": "node --max_old_space_size=4096 node_modules/webpack-dev-server/bin/webpack-dev-server.js",
-    "tslint": "tslint"
+    "tslint": "tslint",
+    "electron-builder": "electron-builder",
+    "electron": "electron"
   },
   "author": "PCCW Solutions",
   "private": true,
@@ -43,11 +45,17 @@
     "@angularclass/hmr-loader": "^3.0.4",
     "@ngx-translate/core": "^7.2.2",
     "@ngx-translate/http-loader": "^2.0.1",
+    "@types/fs-extra": "^5.0.0",
+    "@types/yamljs": "^0.2.30",
     "@ultimate/ngxerrors": "^1.3.0",
+    "ajv": "^6.5.0",
+    "ajv-keywords": "^3.2.0",
     "angular2-text-mask": "^8.0.3",
-    "archiver": "^2.0.0",
+    "archiver": "^2.1.1",
     "bootstrap": "^3.3.7",
+    "electron-localshortcut": "^3.1.0",
     "font-awesome": "^4.7.0",
+    "fs-extra": "^5.0.0",
     "hammerjs": "^2.0.8",
     "html-webpack-plugin": "^2.30.1",
     "jquery": "^3.2.1",
@@ -56,7 +64,8 @@
     "primeng": "^4.1.3",
     "reflect-metadata": "^0.1.10",
     "rxjs": "^5.4.3",
-    "socket.io-client": "^2.0.4",
+    "socket.io-client": "^2.1.1",
+    "yamljs": "^0.3.0",
     "zone.js": "^0.8.16"
   },
   "devDependencies": {
@@ -74,17 +83,18 @@
     "assets-webpack-plugin": "^3.5.1",
     "awesome-typescript-loader": "^3.2.3",
     "codelyzer": "^3.1.2",
-    "copy-webpack-plugin": "^4.3.1",
+    "copy-webpack-plugin": "^4.5.1",
     "cross-env": "^5.0.5",
     "css-loader": "^0.28.4",
-    "electron": "^1.7.6",
+    "electron": "^2.0.2",
+    "electron-builder": "^20.14.7",
     "file-loader": "^0.11.2",
     "html-loader": "^0.5.1",
     "imports-loader": "^0.7.1",
     "istanbul-instrumenter-loader": "^3.0.0",
     "ng-router-loader": "^2.1.0",
     "ngc-webpack": "^3.2.2",
-    "node-sass": "^4.5.3",
+    "node-sass": "^4.9.0",
     "raw-loader": "^0.5.1",
     "rimraf": "^2.6.1",
     "sass-loader": "^6.0.6",
@@ -93,9 +103,9 @@
     "tslint": "^5.6.0",
     "tslint-loader": "^3.5.3",
     "typescript": "^2.4.2",
-    "url-loader": "^0.5.9",
+    "url-loader": "^1.0.1",
     "webpack": "^3.5.4",
-    "webpack-bundle-analyzer": "^2.9.0",
+    "webpack-bundle-analyzer": "^2.13.1",
     "webpack-dev-server": "^2.9.5",
     "webpack-dll-bundles-plugin": "^1.0.0-beta.5",
     "webpack-merge": "^4.1.0",
